--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,20 @@ version: "3"
 services:
   db:
     image: postgres
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
+    ports:
+      - "5432:5432"
+    env_file:
+      - ".env"
   web:
+    restart: always
     build: .
-    command: python manage.py runserver 127.0.0.1:8000
+    command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - DATABASE_URL
     volumes:
       - .:/src
+    env_file:
+      - ".env"
     ports:
       - "8000:8000"
     depends_on:
