Add API endpoints and CRUD app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip==20.2.1
+pip==20.2.3
 Django==3.1
 asgiref==3.2.10
 pytz==2020.1
@@ -22,3 +22,4 @@ wrapt==1.12.1
 flake8==3.8.3
 pyflakes==2.2.0
 six==1.15.0
+djangorestframework==3.11.1
